--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-<img src="/static/images/home.png">
+<img class="img-fluid" src="/static/images/home.png">
 {% endblock %}
