--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,15 @@
   <div class="wrap toprow">
   <div id="topbar" class="hoc clear">
  
-<nav class="navbar navbar-expand-lg navbar bg">
-    <div class="d-flex flex-grow-1">
-        <ul class="navbar-nav">
-    <li class="nav-item">
+    <nav class="navbar navbar-expand-md navbar bg navbar-dark">  
+      <div class="container-fluid">
+  
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbars">
+          <span class="navbar-toggler-icon"></span>        
+        </button>
+        <div class="collapse navbar-collapse navbars" id="navResponsive">
+          <ul class="navbar-nav">
+      <li class="nav-item">
       <a class="nav-link" href="/"> <i class="fa fa-home" aria-hidden="true"></i> 首頁</a>
     </li>
     {% if request.user.is_authenticated %}		  
@@ -57,7 +62,7 @@
 	{% endif %}
 	</ul>
     </div>
-    <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+    <div class="collapse navbar-collapse navbars flex-grow-1 text-right" id="myNavbar">
         <ul class="navbar-nav ml-auto">
     {% if request.user.is_authenticated %}	
     <li>{{ request.user.first_name }}　</li>
